<resources>
    <string name="app_name">NotiLocations</string>
    <string name="tasks">Tasks</string>
    <string name="create_task">Create task</string>
    <string name="titleTextView">Task title</string>
    <string name="title_input">task</string>
    <string name="descriptionTextView">Description</string>
    <string name="add_task">Add Task</string>
    <string name="submitTask">"Submit"</string>
    <string name="notilocations">Notilocations</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="addLocation">Add a location</string>
    <string name="date">date</string>
    <string name="taskTitle">Title</string>
    <string name="taskDescription">description</string>
    <string name="applyChanges">Apply</string>
    <string name="updateLocation">Update Location</string>
    <string name="deleteButton">Delete</string>
    <string name="location">Manifest.permission.ACCESS_FINE_LOCATION</string>
    <string name="about_desc">How many times have you had a task to do outside of the house, but forgot the next time you were near that location?
        Our app is here to solve that problem. This app introduces a simple way for people to manage errands and tasks that many may forget when out and about in their daily lives.
        Connecting the app to your phone’s location allows the user to input various tasks or errands that need to be done, such as stopping at the grocery store to pick up a few items,
        or the pharmacy to pick up a prescription. Simply input or select a specified location on the map and input a goal for the location,
        such as a shopping list that will be sent to the user when within the specified radius which can then be opened and viewed. </string>
    <string name="primary_notification_channel_name">Location Notifications</string>
    <string name="primary_notification_channel_description">Notifications for when you are close to a location.</string>
    <string name="primary_notification_channel_id">0</string>
    <string name="triggerDistanceText">Distance in miles to trigger notification</string>
    <string name="triggerSpeedText">Max speed to trigger notification (mph)</string>
    <string name="triggerOnExitText">Trigger notification on exiting location</string>
    <string name="snackbarItemRemoved">1 item removed</string>
    <string name="snackbarItemUpdated">1 item completed</string>
    <string name="snackbarUndo">UNDO</string>
    <string name="submitContentDescription">Submit</string>
    <string name="deleteContentDescription">Delete</string>
    <string name="settingsDescription">Go to settings</string>
    <string name="addDescription">Add a task</string>
    <string name="addATask">Task list is empty</string>
    <string name="confirmLocation">Confirm Location?</string>

</resources>